Refatoração testes.